--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,14 @@
         android:layout_below="@+id/btn_ijkPlayer"
         android:layout_marginTop="37dp"
         android:text="直播" />
+
+    <Button
+        android:id="@+id/btn_match"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_live"
+        android:layout_alignStart="@+id/btn_live"
+        android:layout_below="@+id/btn_live"
+        android:layout_marginTop="38dp"
+        android:text="匹配" />
 </RelativeLayout>
