--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,14 @@
         android:layout_below="@+id/btn_live"
         android:layout_marginTop="38dp"
         android:text="匹配" />
+
+    <TextView
+        android:id="@+id/txv_userName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_ijkPlayer"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/btn_ijkPlayer"
+        android:layout_marginTop="25dp"
+        android:text="用户名：" />
 </RelativeLayout>
