--- a/app/src/main/res/layout/layout_loading_dialog.xml
+++ b/app/src/main/res/layout/layout_loading_dialog.xml
@@ -3,15 +3,23 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:layout_width="@dimen/sy_p_250"
-        android:layout_height="@dimen/sy_p_250"
-        android:gravity="center">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ProgressBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_width="@dimen/sy_p_250"
+            android:layout_height="@dimen/sy_p_250" />
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/loading_tip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="邀请中..."
+            android:visibility="gone"/>
+
+    </LinearLayout>
 
 </LinearLayout>
