--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="67dp"
-        android:layout_marginStart="67dp"
-        android:layout_marginTop="71dp"
+        android:layout_below="@+id/txv_userName"
+        android:layout_marginLeft="71dp"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="112dp"
         android:text="ijkPlayer播放"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false" />
 
     <Button
         android:id="@+id/btn_live"
@@ -27,7 +27,7 @@
         android:layout_alignLeft="@+id/btn_ijkPlayer"
         android:layout_alignStart="@+id/btn_ijkPlayer"
         android:layout_below="@+id/btn_ijkPlayer"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="41dp"
         android:text="直播" />
 
     <Button
@@ -37,7 +37,7 @@
         android:layout_alignLeft="@+id/btn_live"
         android:layout_alignStart="@+id/btn_live"
         android:layout_below="@+id/btn_live"
-        android:layout_marginTop="38dp"
+        android:layout_marginTop="42dp"
         android:text="匹配" />
 
     <TextView
@@ -49,4 +49,55 @@
         android:layout_alignStart="@+id/btn_ijkPlayer"
         android:layout_marginTop="25dp"
         android:text="用户名：" />
+
+    <EditText
+        android:id="@+id/edit_ipAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/txv_userName"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="14dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
+    <RadioGroup
+        android:id="@+id/radio_group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_ijkPlayer"
+        android:layout_alignStart="@+id/btn_ijkPlayer"
+        android:layout_below="@+id/edit_ipAddress"
+        android:layout_marginTop="15dp"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radio_man"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="男"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/radio_lady"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="女" />
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/btn_ipAdress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/edit_ipAddress"
+        android:layout_marginLeft="21dp"
+        android:layout_marginStart="21dp"
+        android:layout_toEndOf="@+id/edit_ipAddress"
+        android:layout_toRightOf="@+id/edit_ipAddress"
+        android:text="保存" />
 </RelativeLayout>
