--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,16 @@
 
 
     <Button
+        android:id="@+id/btn_imageSelector"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/btn_match"
+        android:layout_alignStart="@+id/btn_match"
+        android:layout_below="@+id/btn_match"
+        android:layout_marginTop="32dp"
+        android:text="图片选择" />
+
+    <Button
         android:id="@+id/btn_ijkPlayer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -100,4 +110,15 @@
         android:layout_toEndOf="@+id/edit_ipAddress"
         android:layout_toRightOf="@+id/edit_ipAddress"
         android:text="保存" />
+
+    <Button
+        android:id="@+id/btn_xq"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/btn_ipAdress"
+        android:layout_alignRight="@+id/btn_ipAdress"
+        android:layout_below="@+id/btn_ijkPlayer"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="33dp"
+        android:text="XQ" />
 </RelativeLayout>
