增加自动登陆功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,4 +121,13 @@
         android:layout_marginEnd="33dp"
         android:layout_marginRight="33dp"
         android:text="XQ" />
+
+    <Button
+        android:id="@+id/btn_switchUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:text="切换账号" />
 </RelativeLayout>
