--- a/app/src/main/res/layout/activity_xq_main.xml
+++ b/app/src/main/res/layout/activity_xq_main.xml
@@ -14,4 +14,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="加入" />
+
+    <EditText
+        android:id="@+id/edit_limitLady"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="参与的女嘉宾总数"/>
 </LinearLayout>
