--- a/app/src/main/res/layout/layout_chart_ui_head.xml
+++ b/app/src/main/res/layout/layout_chart_ui_head.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#32b7b5">
+    >
 
     <RelativeLayout
         android:id="@+id/view_root"
@@ -33,7 +33,7 @@
                 android:id="@+id/text_nickName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="古月"
+                android:text=""
                 android:textSize="@dimen/sy_p_50"
                 android:textColor="#a84561"
                 android:layout_marginLeft="@dimen/sy_p_8"/>
@@ -99,7 +99,7 @@
                 android:id="@+id/text_nickName_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="古月"
+                android:text=""
                 android:textSize="@dimen/sy_p_50"
                 android:textColor="#a84561"
                 android:layout_marginRight="@dimen/sy_p_8"/>
