--- a/app/src/main/res/layout/layout_chart_ui.xml
+++ b/app/src/main/res/layout/layout_chart_ui.xml
@@ -5,7 +5,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/sy_p_420"
+        android:layout_height="@dimen/dp_140"
         >
 
         <Button
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/sy_p_20"
-            android:textSize="@dimen/sy_p_60"
+            android:layout_marginTop="@dimen/dp_7"
+            android:textSize="@dimen/dp_20"
             android:textColor="#222222"
             android:text="请男嘉宾自我介绍" />
 
@@ -33,8 +33,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/text_tip"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/sy_p_40"
-            android:textSize="@dimen/sy_p_70"
+            android:layout_marginTop="@dimen/dp_13"
+            android:textSize="@dimen/sp_23"
             android:textColor="#c5a3b5"
             android:textStyle="bold"
             android:text="180s" />
@@ -51,7 +51,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycle_chart_members"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/sy_p_1000"
+        android:layout_height="@dimen/dp_333"
         >
 
     </android.support.v7.widget.RecyclerView>
