使用腾讯推送

--- a/app/src/main/res/layout/activity_xq_main.xml
+++ b/app/src/main/res/layout/activity_xq_main.xml
@@ -26,7 +26,8 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        android:visibility="gone">
 
         <RadioButton
             android:id="@+id/radio_local"
